--- a/src/components/Projects.css
+++ b/src/components/Projects.css
@@ -252,7 +252,7 @@
   display: flex;
   flex-direction: column;
   align-items: flex-end;
-  margin-left: 170px;
+  margin-left: 220px;
 }
 
 .projects-partners-heading {
@@ -643,7 +643,7 @@
 
 .services-section {
   width: 100%;
-  margin: 64px auto 0 auto;
+  margin: 43px auto -272px auto;
   display: flex;
   justify-content: center;
   align-items: flex-start;
@@ -661,7 +661,7 @@
 .services-left {
   flex: 1;
   color: #fff;
-  padding-top: 18px;
+  padding-bottom: 70px;
   margin-bottom: 240px;
 }
 
@@ -683,7 +683,8 @@
   flex: 1.2;
   display: flex;
   flex-direction: column;
-  gap: 22px;
+  gap: 29px;
+  margin-left: 70px;
 }
 
 .service-card {
